P4ADEV-1674 minor syntax fixes